# canbridge

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  can_tcp_bridge_plan.md  flake.nix
.github/workflows/: tests.yml
nix/modules/: canbridge.nix  default.nix
nix/overlays/: default.nix
nix/shells/: default.nix
nix/tests/: default.nix
src/: lib.rs  main.rs
tests/: integration.rs
