[package]
name = "canbridge"
version = "0.1.0"
edition = "2021"

[dependencies]
socketcan = "3.3"
serde = { version = "1.0", features = ["derive"] }
postcard = { version = "1.0", features = ["use-std"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
libc = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
